<?xml version="1.0"?>
<package format="1">  <!-- format="2" for ROS2 -->
  <name>edge_detector_ros</name>
  <version>1.0.0</version>
  <description>A ROS package for edge detection</description>
  <maintainer email="koiandtsuru@yahoo.co.jp">Masato Tsuru</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
 
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  
  <!-- <export>
    <build_type>catkin</build_type>
  </export> -->
</package>
